--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 
   gtag('config', 'G-TT1S8GMHWH');
 </script>
+  <script>
+    var GoogleAuth; // Google Auth object.
+function initClient() {
+  gapi.client.init({
+      'apiKey': 'AIzaSyAJH8MdGCRAO5XazsIDMB7JHv7iMELul74',
+      'clientId': '40620990270-v5hh988qq1q9jfsfdohdp7s7vchcdenj.apps.googleusercontent.com',
+      'scope': 'https://www.googleapis.com/auth/analytics.metadata.readonly',
+      'discoveryDocs': ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest']
+  }).then(function () {
+      GoogleAuth = gapi.auth2.getAuthInstance();
+
+      // Listen for sign-in state changes.
+      GoogleAuth.isSignedIn.listen(updateSigninStatus);
+  });
+}
+  </script>
 <title>Demo</title>
 </head>
 <body>
