--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@ function initClient() {
 <title>Demo</title>
 </head>
 <body>
+  <button onclick="GoogleAuth.signIn();">Click Me</button>
 </body>
 </html>
