--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ function initClient() {
   </script>
   <script>
   var GoogleAuth;
-  var SCOPE = 'https://www.googleapis.com/auth/drive.anal.readonly';
+  var SCOPE = 'https://www.googleapis.com/auth/analytics.readonly';
   function handleClientLoad() {
     // Load the API's client and auth2 modules.
     // Call the initClient function after the modules load.
