--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ function initClient() {
 
   function initClient() {
     // In practice, your app can retrieve one or more discovery documents.
-    var discoveryUrl = 'https://www.googleapis.com/discovery/v1/apis/drive/v3/rest';
+    var discoveryUrl = 'https://analyticsdata.googleapis.com/$discovery/rest?version=v1beta';
 
     // Initialize the gapi.client object, which app uses to make API requests.
     // Get API key and client ID from API Console.
