--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function initClient() {
         'scope': SCOPE
     }).then(function () {
       GoogleAuth = gapi.auth2.getAuthInstance();
-
+      console.log("Google auth",GoogleAuth)
       // Listen for sign-in state changes.
       GoogleAuth.isSignedIn.listen(updateSigninStatus);
 
@@ -84,6 +84,7 @@ function initClient() {
 
   function setSigninStatus() {
     var user = GoogleAuth.currentUser.get();
+    console.log(user);
     var isAuthorized = user.hasGrantedScopes(SCOPE);
     if (isAuthorized) {
       $('#sign-in-or-out-button').html('Sign out');
