--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function initClient() {
     'metrics': 'ga:sessions'
   })
   .then(function(response) {
-   console.log(response["result"]);
+   console.log("Anal Result",response["result"]);
   })
   .then(null, function(err) {
       // Log any errors.
