--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ function initClient() {
   
 
     console.log(gapi.client.analytics)
+    console.log("Cleint",gapi.client)
     
     
     gapi.client.analytics.data.ga.get({
